feat: basic layout

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -3,7 +3,7 @@
 }
 
 .title {
-    // margin-bottom: 15px;
+    margin-bottom: 15px;
     text-align: center;
     h1 {
         font-size: 40px;
@@ -15,23 +15,29 @@
     }
 }
 
-form label {
-    display: block;
-    margin-top: 20px;
-    margin-bottom: 5px;
-    font-size: 18px;
-    font-weight: 400;
+form {
+    width: 100%;
+    max-width: 460px;
+    margin: 0 auto;
+    label {
+        display: block;
+        margin-bottom: 5px;
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 button {
-    margin-top: 40px;
+    margin-top: 20px;
     border: none;
     outline: none;
     cursor: pointer;
 }
 
 input {
+    width: 100%;
     padding: 12px 10px;
+    margin-bottom: 20px;
     border-radius: 8px;
     font-size: 18px;
     border: 2px solid $black;
@@ -41,4 +47,13 @@ input:focus {
     &::placeholder {
         font-size: 0;
     }
+}
+
+button {
+    width: 100%;
+    padding: 15px 0;
+    background-color: $blue-200;
+    font-size: 18px;
+    color: $white;
+    border-radius: 8px;
 }
