--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -20,7 +20,7 @@ form {
     max-width: 460px;
     margin: 0 auto;
     label {
-        display: block;
+        display: inline-block;
         margin-bottom: 5px;
         font-size: 18px;
         font-weight: 400;
