--- a/src/assets/scss/tools/_grid.scss
+++ b/src/assets/scss/tools/_grid.scss
@@ -1,6 +1,7 @@
 // 12 欄網格
 .row {
     display: flex;
+    flex-wrap: wrap;
     margin: 0 -10px;
 }
 
@@ -18,6 +19,10 @@
 
 .col-4 {
     flex: 0 0 33.333%;
+}
+
+.col-8 {
+    flex: 0 0 66.666%;
 }
 
 .col-3 {
