--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -15,8 +15,12 @@
     }
 }
 
+[class^="col"]>div {
+    position: relative;
+}
+
 form {
-    width: 100%;
+    width: 90%;
     max-width: 460px;
     margin: 0 auto;
     label {
@@ -28,10 +32,20 @@ form {
 }
 
 button {
+    width: 100%;
+    padding: 15px 0;
     margin-top: 20px;
     border: none;
+    background-color: $blue-200;
+    font-size: 18px;
+    color: $white;
+    border-radius: 8px;
     outline: none;
     cursor: pointer;
+}
+
+button.disabled {
+    background-color: $blue-100;
 }
 
 input {
@@ -43,17 +57,12 @@ input {
     border: 2px solid $black;
 }
 
+input.warn {
+    border: 2px solid $orange;
+}
+
 input:focus {
     &::placeholder {
         font-size: 0;
     }
-}
-
-button {
-    width: 100%;
-    padding: 15px 0;
-    background-color: $blue-200;
-    font-size: 18px;
-    color: $white;
-    border-radius: 8px;
 }
