fix: font-color in input

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -48,7 +48,8 @@ button.disabled {
     background-color: $blue-100;
 }
 
-input {
+input,
+select {
     width: 100%;
     padding: 12px 10px;
     margin-bottom: 20px;
