fix: change color of <select>

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -60,6 +60,14 @@ select {
     outline: none;
 }
 
+select {
+    color: $gray;
+}
+
+select.selected {
+    color: $black;
+}
+
 input.warn {
     border: 2px solid $orange;
 }
