refactor: remove color variables

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -36,16 +36,16 @@ button {
     padding: 15px 0;
     margin-top: 20px;
     border: none;
-    background-color: $blue-200;
+    background-color:  #0275D8;
     font-size: 18px;
-    color: $white;
+    color: #fff;
     border-radius: 8px;
     outline: none;
     cursor: pointer;
 }
 
 button.disabled {
-    background-color: $blue-100;
+    background-color: #BEE1FF;
     cursor: not-allowed;
 }
 
@@ -56,20 +56,20 @@ select {
     margin-bottom: 20px;
     border-radius: 8px;
     font-size: 18px;
-    border: 2px solid $black;
+    border: 2px solid #000;
     outline: none;
 }
 
 select {
-    color: $gray;
+    color: #9B9B9B;
 }
 
 select.selected {
-    color: $black;
+    color: #000;
 }
 
 input.warn {
-    border: 2px solid $orange;
+    border: 2px solid  #F5A623;
 }
 
 input:focus {
